# my_nn_lib_c

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  read_mnist.c  train_dnn_mnist.c  train_lenet5_mnist.c
include/my_nn_lib/: activation.h  batchnorm2d.h  conv2d.h  flatten.h  linear.h  linked_list.h  logger.h  loss.h  maxpool2d.h  optimizer.h  tensor.h  tensor_list.h  tensor_ops.h  tensor_util.h  util.h
include/my_nn_lib/dataset/: mnist.h
src/: CMakeLists.txt
src/my_nn_lib/: CMakeLists.txt  activation.c  batchnorm2d.c  conv2d.c  flatten.c  linear.c  linked_list.c  logger.c  loss.c  maxpool2d.c  optimizer.c  tensor.c  tensor_list.c  tensor_ops.c  tensor_util.c  util.c
src/my_nn_lib/dataset/: CMakeLists.txt  mnist.c
tests/: test_conv2d.cpp  test_maxpool2d.cpp  test_tensor.cpp
